<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_background"
    android:padding="@dimen/eight_dp">

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:text="@string/change_profile_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:background="@color/grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/new_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_six_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/new_profile_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_one" />

    <TextView
        android:id="@+id/open_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_six_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/click_new_image"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_image" />

    <TextView
        android:id="@+id/remove_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_six_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/remove_profile_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/twenty_four_dp"
        app:layout_constraintTop_toBottomOf="@id/open_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>