<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="view.ui.SettingsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/twenty_four_dp">

                <View
                    android:id="@+id/view_one"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_hundred_dp"
                    android:background="@drawable/single_rounded_corner_add_contacts_bg"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twelve_dp"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:padding="@dimen/eight_dp"
                    android:src="@drawable/ic_chevron"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/settings_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty_four_dp"
                    android:layout_marginTop="@dimen/thirty_six_dp"
                    android:layout_marginEnd="@dimen/twenty_four_dp"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/eighteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/block_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_six_dp"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:layout_marginEnd="@dimen/thirty_six_dp"
                    android:drawableEnd="@drawable/ic_block_black"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/block_accounts"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_one" />

                <View
                    android:id="@+id/view_two"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/block_list" />

                <TextView
                    android:id="@+id/refer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_six_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginEnd="@dimen/thirty_six_dp"
                    android:drawableEnd="@drawable/ic_refer"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/refer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_two" />

                <View
                    android:id="@+id/view_three"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/refer" />

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_six_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginEnd="@dimen/thirty_six_dp"
                    android:drawableEnd="@drawable/ic_privacy"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_three" />

                <View
                    android:id="@+id/view_four"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacy" />

                <TextView
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_six_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginEnd="@dimen/thirty_six_dp"
                    android:drawableEnd="@drawable/ic_help_outline"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/help"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_four" />

                <View
                    android:id="@+id/view_five"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/help" />

                <TextView
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_six_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginEnd="@dimen/thirty_six_dp"
                    android:drawableEnd="@drawable/ic_feedback"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_five" />

                <View
                    android:id="@+id/view_six"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/feedback" />

                <TextView
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/thirty_six_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginEnd="@dimen/thirty_six_dp"
                    android:drawableEnd="@drawable/ic_contact_us"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/contact_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_six" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>