<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup_gradient"
        android:elevation="@dimen/eight_dp"
        tools:context=".view.SignUp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signup_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/forty_eight_dp"
                    android:layout_marginTop="@dimen/one_hundred_dp"
                    android:text="Sign-Up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/thirty_two_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/forty_eight_dp"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:layout_marginEnd="@dimen/forty_eight_dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:padding="@dimen/sixteen_dp"
                    android:textColor="@color/grey_900"
                    android:textColorHint="@color/grey_700"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="48dp"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/sixteen_dp"
                    android:textColor="@color/grey_900"
                    android:textColorHint="@color/grey_700"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <EditText
                    android:id="@+id/cpassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="48dp"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/sixteen_dp"
                    android:textColor="@color/grey_900"
                    android:textColorHint="@color/grey_700"
                    android:textSize="@dimen/fourteen_sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:background="@drawable/edittext_bg_yellow"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/cpassword"
                    app:layout_constraintStart_toStartOf="@id/cpassword"
                    app:layout_constraintTop_toBottomOf="@+id/cpassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>